@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.54 2002/02/25 13:54:52 stelian Exp $
+$Id: THANKS,v 1.55 2002/03/27 16:48:38 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -85,6 +85,7 @@ Mike Tibor		tibor@lib.uaa.alaska.edu
 Erik Troan		ewt@redhat.com
 Theodore Y. Ts'o 	tytso@valinux.com
 Stephen Tweedie		sct@dcs.ed.ac.uk
+Amith Varghese		amithv@yahoo.com
 Daniel Veillard		Daniel.Veillard@imag.fr
 Jason Venner		jason@idiom.com
 Christian Weisgerber	naddy@mips.rhein-neckar.de
