@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.167 2002/03/11 10:17:42 stelian Exp $
+$Id: CHANGES,v 1.168 2002/03/27 16:48:38 stelian Exp $
 
 Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 =======================================================================
@@ -27,6 +27,10 @@ Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 	source, which prevented the compile in some kernel/glibc
 	headers/architecture combination. Thanks to Bdale Garbee
 	<bdale@gag.com> for reporting the bug.
+
+6.	Added the appropriate error message when dump fails to
+	open the output file for writing. Thanks to Amith Varghese
+	<amithv@yahoo.com> for reporting this bug.
 
 Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
 =======================================================================
